--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ dependencies = []
 readme = "README.md"
 requires-python = ">= 3.12"
 
+[tool.rye]
+managed = true
+virtual = true
+dev-dependencies = []
+
 [tool.ruff.lint]
 # Copied from https://docs.astral.sh/ruff/linter/#rule-selection
 select = [
