--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ requires-python = ">= 3.12"
 [tool.rye]
 managed = true
 virtual = true
-dev-dependencies = []
+dev-dependencies = [
+    "pre-commit>=3.7.1",
+]
 
 [tool.ruff.lint]
 # Copied from https://docs.astral.sh/ruff/linter/#rule-selection
