oViceとSlackの管理権限を持たないものが確認できないようにNoEcho適用

--- a/template.yaml
+++ b/template.yaml
@@ -5,8 +5,10 @@ Parameters:
     Type: String
   OviceClientSecret:
     Type: String
+    NoEcho: true
   SlackWebhookApi:
     Type: String
+    NoEcho: true
 
 Resources:
   BotFunction:
